@@ -93,16 +93,16 @@ class Gem::Indexer
   end
 
   ##
-  # Build various indicies
+  # Build various indices
 
-  def build_indicies
+  def build_indices
     Gem::Specification.dirs = []
     Gem::Specification.add_specs(*map_gems_to_specs(gem_file_list))
 
     build_marshal_gemspecs
-    build_modern_indicies if @build_modern
+    build_modern_indices if @build_modern
 
-    compress_indicies
+    compress_indices
   end
 
   ##
@@ -169,9 +169,9 @@ class Gem::Indexer
   end
 
   ##
-  # Builds indicies for RubyGems 1.2 and newer. Handles full, latest, prerelease
+  # Builds indices for RubyGems 1.2 and newer. Handles full, latest, prerelease
 
-  def build_modern_indicies
+  def build_modern_indices
     specs = Gem::Specification.reject { |s| s.default_gem? }
 
     prerelease, released = specs.partition { |s|
@@ -221,14 +221,14 @@ class Gem::Indexer
   end
 
   ##
-  # Compresses indicies on disk
+  # Compresses indices on disk
   #--
   # All future files should be compressed using gzip, not deflate
 
-  def compress_indicies
-    say "Compressing indicies"
+  def compress_indices
+    say "Compressing indices"
 
-    Gem.time 'Compressed indicies' do
+    Gem.time 'Compressed indices' do
       if @build_modern then
         gzip @specs_index
         gzip @latest_specs_index
@@ -276,12 +276,12 @@ class Gem::Indexer
   end
 
   ##
-  # Builds and installs indicies.
+  # Builds and installs indices.
 
   def generate_index
     make_temp_directories
-    build_indicies
-    install_indicies
+    build_indices
+    install_indices
   rescue SignalException
   ensure
     FileUtils.rm_rf @directory
@@ -297,9 +297,9 @@ class Gem::Indexer
   end
 
   ##
-  # Install generated indicies into the destination directory.
+  # Install generated indices into the destination directory.
 
-  def install_indicies
+  def install_indices
     verbose = Gem.configuration.really_verbose
 
     say "Moving index into production dir #{@dest_directory}" if verbose
@@ -389,7 +389,7 @@ class Gem::Indexer
                          @prerelease_specs_index)
     end
 
-    compress_indicies
+    compress_indices
 
     verbose = Gem.configuration.really_verbose
 
